# vllm-mcp-server

./: .gitignore  LICENSE  QUICKSTART.md  README.md  pyproject.toml
examples/: claude_config.json  cursor_config.json
src/vllm_mcp_server/: __init__.py  server.py
src/vllm_mcp_server/prompts/: __init__.py  system_prompts.py
src/vllm_mcp_server/resources/: __init__.py  metrics.py  server_status.py
src/vllm_mcp_server/tools/: __init__.py  benchmark.py  chat.py  models.py  server_control.py
src/vllm_mcp_server/utils/: __init__.py  config.py  vllm_client.py
tests/: __init__.py  test_resources.py  test_tools.py
