[project]
name = "vllm-mcp-server"
version = "0.1.3"
description = "MCP server for vLLM - expose vLLM capabilities to AI assistants"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    {name = "vLLM MCP Server Contributors"}
]
keywords = ["mcp", "vllm", "llm", "ai", "server"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "mcp>=1.0.0",
    "aiohttp>=3.9.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/micytao/vllm-mcp-server"
Repository = "https://github.com/micytao/vllm-mcp-server"
Issues = "https://github.com/micytao/vllm-mcp-server/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
]
benchmark = [
    "guidellm>=0.1.0",
]

[project.scripts]
vllm-mcp-server = "vllm_mcp_server.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vllm_mcp_server"]

[tool.hatch.build.targets.sdist]
exclude = [
    "assets/",
    "dist/",
    "*.gif",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
